# pydevice2mqtt

./: .gitignore  LICENSE  README.md  pydevice2mqtt.py  pyproject.toml  remote_config.yaml  remote_devices.py
.github/workflows/: python-app.yml
src/pydevice2mqtt/: __init__.py  pydevice2mqtt.py  remote_devices.py
test/: .coverage  pydevice2mqtt_test.py  remote_config.yaml  remote_config2.yaml  test.yaml
